log
Thu 24 Aug 2023 04:23:50 PM UTC: 
 tests:  0|6
total_score: 0/70
29755a2
Thu 24 Aug 2023 04:40:05 PM UTC: 
 list.c | 47 +++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 45 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:40:3: error: expected ‘,’ or ‘;’ before ‘if’
   40 |   if(newList == NULL)
      |   ^~
Compilation failed
4042eb6
Thu 24 Aug 2023 04:40:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5eded35
Thu 24 Aug 2023 04:45:02 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:40:7: error: ‘newList’ undeclared (first use in this function); did you mean ‘newlist’?
   40 |   if (newList == NULL)
      |       ^~~~~~~
      |       newlist
list.c:40:7: note: each undeclared identifier is reported only once for each function it appears in
list.c:38:9: error: unused variable ‘newlist’ [-Werror=unused-variable]
   38 |   List* newlist = (List *) malloc(sizeof(List));
      |         ^~~~~~~
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f06c4a6
Thu 24 Aug 2023 04:45:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5da16b4
Thu 24 Aug 2023 04:45:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5e3163c
Thu 24 Aug 2023 04:45:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2d4137f
Thu 24 Aug 2023 04:47:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6e3910e
Thu 24 Aug 2023 04:50:25 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|5
total_score: 10/70
a653d67
Thu 24 Aug 2023 04:50:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c8269c3
Thu 24 Aug 2023 04:51:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f30f29f
Thu 24 Aug 2023 07:51:19 PM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:70:1: error: control reaches end of non-void function [-Werror=return-type]
   70 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
df7636b
Thu 24 Aug 2023 07:51:36 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:77:30: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   77 | void * lastList(List * list) {
      |                              ^
list.c:81:30: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   81 | void * prevList(List * list) {
      |                              ^
list.c:90:42: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   90 | void pushFront(List * list, void * data) {
      |                                          ^
list.c:93:41: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   93 | void pushBack(List * list, void * data) {
      |                                         ^
list.c:102:44: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  102 | void pushCurrent(List * list, void * data) {
      |                                            ^
list.c:105:30: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  105 | void * popFront(List * list) {
      |                              ^
list.c:110:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  110 | void * popBack(List * list) {
      |                             ^
list.c:121:32: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  121 | void * popCurrent(List * list) {
      |                                ^
list.c:125:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  125 | void cleanList(List * list) {
      |                             ^
test.c:9:1: error: parameter ‘test_id’ is initialized
    9 | int test_id = -1;
      | ^~~
test.c:12:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   12 | int success(){
      |              ^
test.c:17:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   17 | void err_msg(char* msg){
      |                        ^
test.c:24:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   24 | void ok_msg(char* msg){
      |                       ^
test.c:30:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   30 | void info_msg(char* msg){
      |                         ^
test.c:35:75: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   35 | int test_suite(int(*test)(), char* msg, int max_score, int id, int req_id){
      |                                                                           ^
test.c:51:26: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   51 | List* initialize_exList(){
      |                          ^
test.c:73:29: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   73 | List* initialize_emptyList(){
      |                             ^
test.c:83:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   83 | int test_create(){
      |                  ^
test.c:98:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   98 | int test_first_next(){
      |                      ^
test.c:171:21: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  171 | int test_last_prev(){
      |                     ^
test.c:233:21: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  233 | int test_pushfront(){
      |                     ^
test.c:298:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  298 | int test_pushcurrent(){
      |                       ^
test.c:357:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  357 | int test_popcurrent(){
      |                      ^
test.c:448:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  448 | int main( int argc, char *argv[] ) {
      |                                    ^
In file included from test.c:5:
list.c:65:8: error: old-style parameter declarations in prototyped function definition
   65 | void * nextList(List * list)
      |        ^~~~~~~~
test.c:468: error: expected ‘{’ at end of input
  468 | }
      | 
test.c:468: error: control reaches end of non-void function [-Werror=return-type]
  468 | }
      | 
cc1: all warnings being treated as errors
Compilation failed
a2ae86d
Thu 24 Aug 2023 07:51:46 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4610a7a
Thu 24 Aug 2023 07:55:42 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
b3f1ba4
